force-app/main/default/objects/User_Problem_Completion__c/User_Problem_Completion__c.object-meta.xml
<CustomObject>
    <label>User Problem Completion</label>
    <pluralLabel>User Problem Completions</pluralLabel>
    <nameField>
        <displayFormat>UPC-{0000}</displayFormat>
        <label>Completion Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>