force-app/main/default/objects/User_Problem_Completion__c/fields/Coding_User__c.field-meta.xml
<CustomField>
    <fullName>Coding_User__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Coding User</label>
    <referenceTo>Coding_User__c</referenceTo>
    <relationshipLabel>Problem Completions</relationshipLabel>
    <relationshipName>Problem_Completions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>