force-app/main/default/objects/User_Problem_Completion__c/fields/Completed_On__c.field-meta.xml
<CustomField>
    <fullName>Completed_On__c</fullName>
    <label>Completed On</label>
    <required>true</required>
    <type>Date</type>
</CustomField>