force-app/main/default/objects/User_Problem_Completion__c/fields/Daily_Problem__c.field-meta.xml
<CustomField>
    <fullName>Daily_Problem__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Daily Problem</label>
    <referenceTo>Daily_Problem__c</referenceTo>
    <relationshipLabel>User Completions</relationshipLabel>
    <relationshipName>User_Completions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>